# soroban-crashlab

.github/workflows/: ci.yml
apps/web/: .env.example  .gitignore  deployment-guide.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/web/e2e/: artifacts.spec.ts  home.spec.ts  mobile-responsive.spec.ts  runs.spec.ts
apps/web/src/app/: add-artifact-explorer.tsx  add-dark-mode-support.tsx  add-notification-center-ui.tsx  add-reporting-templates-manager.tsx  add-run-comparison-side-by-side-view-utils.test.ts  add-run-comparison-side-by-side-view-utils.ts  add-run-comparison-side-by-side-view.integration.test.ts  add-run-comparison-side-by-side-view.tsx  add-run-timeline.tsx  add-tagging-and-labels-ui.tsx  alerting-settings-page-utils.test.ts  alerting-settings-utils.test.ts  globals.css  integrate-sentry-integration-for-crash-reporting-utils.test.ts  integrate-sentry-integration-for-crash-reporting.tsx  integrate-webhook-manager-for-run-events.tsx  layout.tsx  log-viewer-utils.test.ts  maintainer-mode-utils.test.ts  maintainer-mode-utils.ts  mockRuns.test.ts  mockRuns.ts  page.test.tsx  page.tsx  (+10 more)
contracts/crashlab-core/src/: auth_matrix.rs  crash_index.rs  fixture_sanitize.rs  regression_grouping.rs  replay.rs  runner.rs  scenario_export.rs  simulation.rs  threat_model_tests.rs
contracts/crashlab-core/tests/: runner_simulation_bridge.rs
contracts/soroban-example/: Cargo.toml  README.md
contracts/soroban-example/src/: lib.rs
ops/: README.md
scripts/contracts/: build-soroban-example.sh
scripts/roadmap/: create_github_issues.sh
(+37 files in other folders)
